*Empty MediaWiki Message*

--- a/ژونپوهنه.mw
+++ b/ژونپوهنه.mw
@@ -5,7 +5,7 @@
 |-
 |valign="------"|[[Image:Goliath beetle.jpg|90px|Goliath beetle]]
 |valign="------"|[[Image:Thompson's Gazelle.jpeg|90px|Gazelle]]
-|}<div style="border: none; width:200px;"><div class="thumbcaption">ژواکپوهنه د ژوندانه ډول ډول اړخونه څېړي ''(clockwise from top-left)'' ''[[E. coli]]'', tree [[fern]], [[gazelle]], [[Goliathus|Goliath beetle]]</div></div></div>
+|}<div style="border: none; width:200px;"><div class="thumbcaption">ژونپوهنه د ژوندانه ډول ډول اړخونه څېړي ''(clockwise from top-left)'' ''[[E. coli]]'', tree [[fern]], [[gazelle]], [[Goliathus|Goliath beetle]]</div></div></div>
 <font face="Tahoma">
 '''ژونپوهنه''' د دوه نومونو، ژووند او پوهنې يو تړنګنوم دی. په انګريزي ژبه بيالوژي بلل کېږي او په عربي ژبه ورته علم الحيات وايي. ژونپوهنه د ژوند په اړه د زده کړې هغه ډګر دی چې د ژوند په اړه څرخي او د ژوند سره تړاو لري. د پوهې همدا ارت ډګر ژواندي (اورګانيزمونه) د زده کړې او څېړنې په بېلابېلو ډلو وېشي او د هغوي سره تړلي ټولو ژونپوهنيزو کړنو او ځليزو په اړه پنځونې يا بحثونه کوي. 
 
