--- a/نړيوال_غزېدلی_جال.mw
+++ b/نړيوال_غزېدلی_جال.mw
@@ -55,7 +55,7 @@ WWW؟
 [[lv:Globālais tīmeklis]]
 [[mk:World Wide Web]]
 [[ml:വേള്‍ഡ് വൈഡ് വെബ്]]
-[[ms:Jaringan Sejagat]]
+[[ms:Jaringan sejagat]]
 [[my:၀က်ဘ်]]
 [[nl:Wereldwijd web]]
 [[nn:Verdsveven]]
