--- a/پښتانه.mw
+++ b/پښتانه.mw
@@ -31,21 +31,21 @@ The origins of the Pashtuns are mixed, but their language is classified as an [[
 ===ژبني روايتونه===
 د پښتنو د  نسلي اساس په لړ کې د بني اسرائيليت نظريه تر ټولو زړه او لومړۍ نظريه ده - دا په لمړي ځل د مغل پاچا جهانګير (1612 ء ) د يو سپه سالار خان جهان لودهي په لار ښودنه د مغل دربار يو منشي نعمت الله هروي د هيبت خان کاکړ په مرسته په مخزن افغاني نومې کتاب کې وړاندې کړله - ددې نظرېې په ځايي پلويانو کې قاضي عطاء الله ، حافظ رحمت خان ، زرداد  خان ، افضل خان خټک او  روشن خان او په مستشريقينو کې سر ويليم جونز ، اليکزينډر برنس او راورټي د يادونې وړ دي - د خوشال خان خټک د يو شعر نه داسې بريښي چې هغه هم له دې نظرېې پلوي و - د بني اسرايئليت د نظرېې تنستې په دې ډول بڼل شوي دي -
 
-##ساول (طالوت ) چې د حضرت يعقوب ء په دولسو ځامنو کې د بن يامين د اولاده و ، د پښتنو ور نيکۀ و - روايت کيږي چې د طالوت له اړخه د يو شرط يا ازميښت پوره  کولو نه پس طالوت خپله لور ميکل حضرت داؤد ته نکاح کړه - خو داؤد ته ېې زړه ښه نه و ، او سترګې ېې ورته خړې وې  - دغه رنګ حضرت داؤد خپل کور کلی پريښود او چيرته بل ځاېې ېې پناه واخسته - خو څه موده پس طالوت د بني اسرائيل سره په خپل کړي ظلم پښيمانه شو او په خپله خوښه او رضا ېې پاچاهي حضرت داؤد ته وسپارله ، خپلې دوه اوميدوارې ښځې ېې د داؤد په پناه کې پريښودی او پخپله د کفارو په ضد غزا له لاړلو او د لسو ځامنو سره اوژل شو -
-##د طالوت د دواړو اوميدوارو ښځو يو يو هلک ؛ ارميا او برخيا ؛ اوزيږول - داؤد د دواړو ماشومانو ښه پالنه ، روزنه او خصمانه اوکړه ، برخيا ېې خپل مشر وزير او ارمياء ېې د لښکرو سپه سالار اوټاکل  - د ارمياء يو يو ځوېې اصف او افغانا پيدا شول چې بيا وروستو يو د حضرت سليمان ء وزير اعظم او بل ېې د فوځ قوماندان شو - د بيت المقد س  ودانې د دغه افغانا په څارنه کې جوړه شوه -
-##د حضرت سليمان ء د مرګ نه پس بني اسرائيل بې لارې او نافرمانه شول - او د عذاب په صورت  کې پرې الله پاک بخت نصر مسلط کړو - بخت نصر په بني اسرائيلو ډير ظلم او زياتی اوکړو - او دوۍ ېې بې دريغه اوژل - په نتيجه کې بني اسرائيل په کډه کولو او وطن پريښودلو مجبور او چنګ ونګ شول - له دغه بني اسرائيلو يوې قبيلې د غور غرونو ته کډه يوړله او په دغه غرونو کې ميشتۀ شول -
-##حضرت خالد بن وليد يو لوړ رتبه صحابي او د بنی اسرائيلو د يوې قبيلې سردار و - د هجرت په اتم کال هغوۍ د غور په غورنو کې ميشت بني اسرائيلو ته د نبي اکرم ص د نبوت زيری او د ايمان راوړلو بلنه ورکړه - په جواب کې قيس عبدالرشيد د يو پړاوي په بدرګه مدينې منورې ته راغی او د نبي کريم ص سره ېې اوليدل او ايمان ېې راوړو - د قيس عبراني نوم  په عبدالرشيد واوختو - دغه قيس عبدالرشيد د پښتنو نيکۀ و - قيس د خالد بن وليد د لور ساره بي بي  سره نکاح اوکړو - د مکې مکرمې د واک او قبضې اخستلو په تاريخي مرکه کې ېې ګډون اوکړو او بيرته غور ته ستون شو - د اسلام د دين تبليغ ېې شورو کړو - په کال 41 هـ کې د 87 اووه اتيا  کاله په عمر کې په يو جنګ کې شهيد شولو - سړبڼ ،  غورغشت او  بيټن د هغه درې ځامن و - او د پښتنو شجره له دغه ځايه شورو کيږي -
+#ساول (طالوت ) چې د حضرت يعقوب ء په دولسو ځامنو کې د بن يامين د اولاده و ، د پښتنو ور نيکۀ و - روايت کيږي چې د طالوت له اړخه د يو شرط يا ازميښت پوره  کولو نه پس طالوت خپله لور ميکل حضرت داؤد ته نکاح کړه - خو داؤد ته ېې زړه ښه نه و ، او سترګې ېې ورته خړې وې  - دغه رنګ حضرت داؤد خپل کور کلی پريښود او چيرته بل ځاېې ېې پناه واخسته - خو څه موده پس طالوت د بني اسرائيل سره په خپل کړي ظلم پښيمانه شو او په خپله خوښه او رضا ېې پاچاهي حضرت داؤد ته وسپارله ، خپلې دوه اوميدوارې ښځې ېې د داؤد په پناه کې پريښودی او پخپله د کفارو په ضد غزا له لاړلو او د لسو ځامنو سره اوژل شو -
+#د طالوت د دواړو اوميدوارو ښځو يو يو هلک ؛ ارميا او برخيا ؛ اوزيږول - داؤد د دواړو ماشومانو ښه پالنه ، روزنه او خصمانه اوکړه ، برخيا ېې خپل مشر وزير او ارمياء ېې د لښکرو سپه سالار اوټاکل  - د ارمياء يو يو ځوېې اصف او افغانا پيدا شول چې بيا وروستو يو د حضرت سليمان ء وزير اعظم او بل ېې د فوځ قوماندان شو - د بيت المقد س  ودانې د دغه افغانا په څارنه کې جوړه شوه -
+#د حضرت سليمان ء د مرګ نه پس بني اسرائيل بې لارې او نافرمانه شول - او د عذاب په صورت  کې پرې الله پاک بخت نصر مسلط کړو - بخت نصر په بني اسرائيلو ډير ظلم او زياتی اوکړو - او دوۍ ېې بې دريغه اوژل - په نتيجه کې بني اسرائيل په کډه کولو او وطن پريښودلو مجبور او چنګ ونګ شول - له دغه بني اسرائيلو يوې قبيلې د غور غرونو ته کډه يوړله او په دغه غرونو کې ميشتۀ شول -
+#حضرت خالد بن وليد يو لوړ رتبه صحابي او د بنی اسرائيلو د يوې قبيلې سردار و - د هجرت په اتم کال هغوۍ د غور په غورنو کې ميشت بني اسرائيلو ته د نبي اکرم ص د نبوت زيری او د ايمان راوړلو بلنه ورکړه - په جواب کې قيس عبدالرشيد د يو پړاوي په بدرګه مدينې منورې ته راغی او د نبي کريم ص سره ېې اوليدل او ايمان ېې راوړو - د قيس عبراني نوم  په عبدالرشيد واوختو - دغه قيس عبدالرشيد د پښتنو نيکۀ و - قيس د خالد بن وليد د لور ساره بي بي  سره نکاح اوکړو - د مکې مکرمې د واک او قبضې اخستلو په تاريخي مرکه کې ېې ګډون اوکړو او بيرته غور ته ستون شو - د اسلام د دين تبليغ ېې شورو کړو - په کال 41 هـ کې د 87 اووه اتيا  کاله په عمر کې په يو جنګ کې شهيد شولو - سړبڼ ،  غورغشت او  بيټن د هغه درې ځامن و - او د پښتنو شجره له دغه ځايه شورو کيږي -
 
 په دې ورچاڼ کې د بني اسرائيليت د نظرېې غوره او اساسي ټکي راخستلي شوي دي - چې له دې نظرېې کوچ ګڼل کيږي - او دا نظريه په هم دې اساسي ټکو او  ستنو ولاړه ده - ښاغلي بهادر شاه کاکاخيل په خپل کتاب (پښتانۀ د تاريخ په رڼا کې ) په دې نظرېې  په زړه پورې او دقيق بحث کړی دی - هغوۍ د تورات او د تاريخ په حوالو سره دا حقيقت ډاګيزه کړی چې د بني اسرائيليت نظريه څه تاريخي او او ثقافتي بيلګه او بنياد نه لري او دا چې دا نظريه محض يو تصور دی او افسانه ده -
 
 راځۍ چې د تاريخ په تلۀ دا قيصه او دعوا اوتلوو - او د تاريخ د خلې نه برغولی پورته کړو چې څه وايي ؟ 
 
-## تاريخ د طالوت د لور ميکل او د داؤد ء د وادۀ ، د داؤد د خپل کور کلي پريښودلو او په بل ځاېې د پناه اخستلو او د بني اسرئيلو د نافرمانۍ ، خود سرۍ او د بې لارې کيدلو تصديق کوي -
-## تاريخ دا نه مني چې طالوت په خپله خوښه او رضا پاچاهي او قدرت داؤد ته پريښی و - خپلې دوه اوميدوارې ښځې ېې د هغه په پناه کې ورکړې وې - او په خپله د لسو ځامنو سره په جنګ کې وژلی شوی وو - تاريخ وايي چې د مايوسۍ په حال کې هغه ځان پخپله وژلی و - او د مرګ نه پس ېې ځوېی اشبوست د بني اسرائيلو پاچا شو -
-## چې طالوت ځان پخپله اوواژه ، او په ځاېې ېې زوی پاچا شو نو بيا خو بې له څه شکه دده  د دوه اوميدوارې ښځو د داؤد ء په پناه کې د پريښودلو قيصه دروغ کيږي -  او په دغه صورت کې د ارمياء او برخيا وجود پخپله يوه لويه سواليه نښه جوړه شي - تاريخ د داؤد د مشر وزير او د لښکرو د سپه سالار په حيث د ارمياء او برخيا تصديق نه کوي -
-## تاريخ د ارمياء او برخيا د ځامنو آصف او افغانا د حضرت سليمان ء د حکومت د وزير اعظم او قوماندان په حيث د تقرر تصديق هم نه کوي - البته تاريخ د بني اسرائيلو د (لاوې) قبيلې د يو وګړي اصف بن برکيا يادونه کوي خو هغه  د سپه سالار په حيث نه بلکه د يو منلي شوي موسيقار په حيث ياد شوی دی -
-## بيت المقدس يو تاريخي او مذهبي حيثيت لري - تاريخ د بيت المقدس د ودانۍ  ټول لوۍ واړه تفصيلات په خپله ځولۍ کې سنبال کړي دي - خو د څارنوال په حيث د افغانا په شتون غلی دی - 
-## د بني اسرائيليت د نظرېې منونکي چې په څه ډول د حضرت سليمانء د مرګ نه پس د بني اسرائيلو د بې لارې کيدلو او د بخت نصر قيصه بيانوي ، د هغې نه داسې بريښي چې د بخت نصر يرغل او چپاوؤنه د سليمان ء د مرګ نه سمدستي پس شوي و- خو تاريخ وايي چې د سليمان  دور و.
+# تاريخ د طالوت د لور ميکل او د داؤد ء د وادۀ ، د داؤد د خپل کور کلي پريښودلو او په بل ځاېې د پناه اخستلو او د بني اسرئيلو د نافرمانۍ ، خود سرۍ او د بې لارې کيدلو تصديق کوي -
+# تاريخ دا نه مني چې طالوت په خپله خوښه او رضا پاچاهي او قدرت داؤد ته پريښی و - خپلې دوه اوميدوارې ښځې ېې د هغه په پناه کې ورکړې وې - او په خپله د لسو ځامنو سره په جنګ کې وژلی شوی وو - تاريخ وايي چې د مايوسۍ په حال کې هغه ځان پخپله وژلی و - او د مرګ نه پس ېې ځوېی اشبوست د بني اسرائيلو پاچا شو -
+# چې طالوت ځان پخپله اوواژه ، او په ځاېې ېې زوی پاچا شو نو بيا خو بې له څه شکه دده  د دوه اوميدوارې ښځو د داؤد ء په پناه کې د پريښودلو قيصه دروغ کيږي -  او په دغه صورت کې د ارمياء او برخيا وجود پخپله يوه لويه سواليه نښه جوړه شي - تاريخ د داؤد د مشر وزير او د لښکرو د سپه سالار په حيث د ارمياء او برخيا تصديق نه کوي -
+# تاريخ د ارمياء او برخيا د ځامنو آصف او افغانا د حضرت سليمان ء د حکومت د وزير اعظم او قوماندان په حيث د تقرر تصديق هم نه کوي - البته تاريخ د بني اسرائيلو د (لاوې) قبيلې د يو وګړي اصف بن برکيا يادونه کوي خو هغه  د سپه سالار په حيث نه بلکه د يو منلي شوي موسيقار په حيث ياد شوی دی -
+# بيت المقدس يو تاريخي او مذهبي حيثيت لري - تاريخ د بيت المقدس د ودانۍ  ټول لوۍ واړه تفصيلات په خپله ځولۍ کې سنبال کړي دي - خو د څارنوال په حيث د افغانا په شتون غلی دی - 
+# د بني اسرائيليت د نظرېې منونکي چې په څه ډول د حضرت سليمانء د مرګ نه پس د بني اسرائيلو د بې لارې کيدلو او د بخت نصر قيصه بيانوي ، د هغې نه داسې بريښي چې د بخت نصر يرغل او چپاوؤنه د سليمان ء د مرګ نه سمدستي پس شوي و- خو تاريخ وايي چې د سليمان  دور و.
 
 [[Image:Shabkadr_Fort_outside_Peshawar_attacked_by_tribesmen.jpg|thumb|left|230px|Pashtun tribesmen attacking the British-held Shabkadr Fort outside Peshawar in 1897]]
 Some [[anthropology|anthropologists]] lend credence to the mythical oral traditions of the [[Pashtun tribes]] themselves. For example, according to the ''[[Encyclopaedia of Islam]]'', the [[theory of Pashtun descent from Israelites]] is traced to ''Maghzan-e-Afghani'' who compiled a history for ''Khan-e-Jehan Lodhi'' in the reign of [[Mughal Empire|Mughal]] Emperor [[Jehangir]] in the [[17th century]]&nbsp;CE. Another book that corresponds with Pashtun historical records, ''Taaqati-Nasiri'', states that in the 7th century a people called the [[Children of Israel|Bani Israel]] settled in [[Ghor Province|Ghor]], southeast of [[Herat]], Afghanistan, and then migrated south and east. These Bani Israel references are in line with the commonly held view by Pashtuns that when the twelve tribes of [[Israelite|Israel]] were dispersed (see [[History of ancient Israel and Judah|Israel and Judah]] and [[Ten Lost Tribes]]), the [[tribe of Joseph]], among other Hebrew tribes, settled in the region.<ref name="Virtual Jewish History">[http://www.jewishvirtuallibrary.org/jsource/vjw/Afghanistan.html Afghanistan], ''The Virtual Jewish History Tour'' (retrieved 10 January 2007).</ref> Hence the [[tribal name]] '[[Yusufzai|Yusef Zai]]' in Pashto translates to the 'sons of Joseph'. A similar story is told by Iranian historian [[Firishta|Ferishta]].<ref name="Ferishta">[http://persian.packhum.org/persian/pf?file=06901021&ct=10 Introduction]: [[Firishta|Muhammad Qāsim Hindū Šāh Astarābādī Firištah]], ''History Of The Mohamedan Power In India'', The [[Packard Humanities Institute]] Persian Texts in Translation (retrieved 10 January 2007).</ref>
