--- a/پښتانه.mw
+++ b/پښتانه.mw
@@ -60,7 +60,7 @@ The oral tradition may, however, be a myth which grew out of a political and cul
 د انسانانو د ډي ان اې په هکله څېړنو ډېرو نورو پوښتنو ته ځواب وييلی، او دا يو داسې نوی انقلاب دی چې ددې په مرسته د بېلابېلو لرغونو وګړو او توکمونو ژنټيکي بنسټ او آر څوک موندلای شي. د پښتنو په هکله د ترسره شوي ژنيټيکي څېړنو له مخې دا په ډاګه شوې چې پښتانه په لويه کچه ايراني خلکو او همدا شان د [[پاکستان]] په سهېلي سيمو کې مېشته [[بوروشو]] خلکو سره، چې ځانته يوه ځانګړې ژبه لري نژدې تړلې ريښې لري.
 
 ===نوی پېر===
-پښتانه د افغانستان د نوي تاريخ يو اهم ټبر دی چې ددې هېواد په جوړولو کې يې اهم رول لوبولی، همدا شان د پاکستان په جوړولو کې د پښتنو ذکر نه پرته د پاکستان تاريخ نيمګړی پاته کېږي. د هوتکيانو پېر او تر دې وروسته د درانيانو پېر په تاريخي لحاظ د پښتنو د پاچايي اهم وختونه ګڼل کېږي<ref name="US State Dept">[http://dosfan.lib.uic.edu/ERC/bgnotes/sa/afghanistan9407.html Afghanistan: History], ''U.S. Department of State'' (retrieved 10 October 2006).</ref> چې په دغو وختونو کې پښتنو د هندوستان ډېرۍ سيمې د خپل واک په ولکه کې رواستلې. هوتکيان د غلجيو پښتنو هغه ټبر دی چا چې له ۱۷۲۲ نه تر ۱۷۳۶ کالونو ترمېنځ د پارس د سفويانو سره په جګړه کړې د پارس د امپراطورۍ ډېرې سيمې خپلې کړې.This was followed by the conquests of [[Ahmed Shah Abdali|Ahmad Shah Durrani]] who was a former high-ranking military commander under the ruler [[Nader Shah|Nadir Shah]] of Persia. He founded the Durrani Empire that covered most of what is today Afghanistan, Pakistan, [[Kashmir region|Kashmir]], [[Punjab (India)|Indian Punjab]], and [[Khorasan]] province of Iran.<ref name="PBS Map">[http://www.pbs.org/wnet/wideangle/shows/afghanistan/images/info_g2.gif Map of Durrani Empire], ''pbs.org'' (retrieved 10 October 2006).</ref><ref name="Durrani Map">[http://www.afghanland.com/history/ahmadshah.html Map of the Durrani Empire], ''Afghanland'' (retrieved 10 October 2006).</ref> After the fall of the Durrani Empire in 1818, it was the [[Barakzai Dynasty|Barakzai]] clan that took control of Afghanistan. Specifically, the subclan known as the [[Mohamedzai]] ruled Afghanistan between 1826 to the end of [[Mohammed Zahir Shah|Mohammad Zahir Shah]] reign in 1973. This legacy continues into modern times as Afghanistan is run by President [[Hamid Karzai]], who is an ethnic Pashtun from [[Kandahar]].
+پښتانه د افغانستان د نوي تاريخ يو اهم ټبر دی چې ددې هېواد په جوړولو کې يې اهم رول لوبولی، همدا شان د پاکستان په جوړولو کې د پښتنو ذکر نه پرته د پاکستان تاريخ نيمګړی پاته کېږي. د هوتکيانو پېر او تر دې وروسته د درانيانو پېر په تاريخي لحاظ د پښتنو د پاچايي اهم وختونه ګڼل کېږي<ref name="US State Dept">[http://dosfan.lib.uic.edu/ERC/bgnotes/sa/afghanistan9407.html Afghanistan: History], ''U.S. Department of State'' (retrieved 10 October 2006).</ref> چې په دغو وختونو کې پښتنو د هندوستان ډېرۍ سيمې د خپل واک په ولکه کې رواستلې. هوتکيان د غلجيو پښتنو هغه ټبر دی چا چې له ۱۷۲۲ نه تر ۱۷۳۶ کالونو ترمېنځ د پارس د سفويانو سره په جګړه کړې د پارس د امپراطورۍ ډېرې سيمې خپلې کړې. تر دې وروسته د احمد شاه ابدالي د امپراتورۍ رامېنځ ته شوه. احمد شاه ابدالي د پارس د پاچا د نادرشاه يو جګپوړی پوځي افسر وه. هغه يو پښتون پاچا وه چې د درانيو د واکمنيو د پېر بنسټ يې کېښوده چې د همدې واکمنۍ په ولکه کې افغانستان، پاکستان، کشمير، هندي پنجاب او خراسان شامل وه.<ref name="PBS Map">[http://www.pbs.org/wnet/wideangle/shows/afghanistan/images/info_g2.gif د درانيو د واکمنۍ نخشه], ''pbs.org'' (retrieved 10 October 2006).</ref><ref name="Durrani Map">[http://www.afghanland.com/history/ahmadshah.html د درانيو د واکمنۍ نخشه], ''افغانلېنډ'' (retrieved 10 October 2006).</ref> په ۱۸۱۸ ز کال کې د درانيو د واکمنۍ د پراپرځېدلو وروسته بيا بارکزيو پر افغانستان واکمني کوله. په ځانګړي توګه ياد شوی ټبر، محمدزيانو بيا له ۱۸۲۶ ز کال نه تر ۱۹۷۳ ز کال پورې د محمد ظاهر شاه تر پاچاهۍ پورې پر افغانستان خپل واک چلاوه. همدا اوس هم د افغانستان ولسمشر حامد کرزی يو [[کندهار]]ی پښتون دی، چې د لومړي ځل لپاره په ولسواکيزه توګه ولسمشر ټاکل شوی دی.
 
 The Pashtuns in Afghanistan fought the [[British Empire|British]] to a standstill and kept the [[Russian Empire|Russians]] at bay during the so-called [[The Great Game|Great Game]], during which Afghanistan remained an independent [[state]] that played the two large imperialist empires against each other to maintain some semblance of autonomy.  (See the [[Siege of Malakand]] for an example of this). Despite this, during the reign of [[Abdur Rahman Khan]] (1880-1901), Pashtun regions were divided by the [[Durand Line]], and control of what is today western Pakistan was ceded to [[British Raj|British India]] in 1893.<ref name="Britannica Durand">[http://www.britannica.com/eb/article-9031550/Durand-Line Durand Line], [[Encyclopaedia Britannica]] (retrieved 10 October 2006).</ref> In the 20th century, some Pashtun leaders living under British Indian rule in the [[North-West Frontier Province]] supported [[Indian independence movement|Indian independence]], including [[Khan Wali Khan]] and [[Khan Abdul Ghaffar Khan]] (both members of the [[Khudai Khidmatgar]], popularly referred to as the ''Surkh posh'' or "the Red shirts"), and were inspired by [[Mahatma Gandhi]]'s [[nonviolence|non-violent]] method of resistance.<ref name="Red Shirts">[http://www.bachakhan.com/ Khan Abdul-Ghaffar Khan], ''Bachakhan.com'' (retrieved 10 October 2006).</ref> Later, in the 1970s, Khan Wali Khan pressed for more autonomy for Pashtuns.
 
