--- a/پښتانه.mw
+++ b/پښتانه.mw
@@ -71,13 +71,13 @@ Pashtuns in Afghanistan attained complete independence from British intervention
 ==د پښتنو اوسنی پېژند==
 د تاريخپوهانو، وګړپوهانو او پخپله پښتنو ترمېنځ يو داسې بحث دی چې پښتانه د آر له مخې څوک دی. او ددوی په هکله تر ټولو منل شوی او عام اندونه دا دي:
 * Pashtuns are predominantly an [[Iranian peoples|Eastern Iranian people]] who are speakers of the [[Pashto language]] and live in a contiguous geographic location across Pakistan and Afghanistan. This is the generally accepted academic view.<ref name="Britannica: Pashtuns">[http://www.britannica.com/eb/article-9058636/Pashtun Pashtun] ''Britannica On-Line'' (retrieved 18 January 2007).</ref>
-* پښتانه مسلمانان دي چې د پښتونولی په لار روان دي، او په همدې توګه پښتو د هغوی لومړنی ژبه ده.<ref name="UPenn Gazette">[http://www.upenn.edu/gazette/0506/feature2_4.html Understanding Pashto] ''University of Pennsylvania Gazette'' (retrieved 18 January 2007).</ref> 
+* پښتانه مسلمانان دي چې د پښتونولی په لار روان دي، او په همدې توګه پښتو د هغوی لومړنی ژبه ده.<ref name="UPenn Gazette">[http://www.upenn.edu/gazette/0506/feature2_4.html Understanding Pashto] ''د پېنسلوينيا د پوهنتون ګازيت'' (retrieved 18 January 2007).</ref> 
 * In accordance with the legend of [[Qais Abdur Rashid]], the figure traditionally regarded as progenitor of the Pashtun people, Pashtuns are those whose related [[patrilineality|patrilineal descent]] may be traced back to legendary times.
 
-These three definitions may be described as the ethno-linguistic definition, the religious-cultural definition, and the patrilineal definition, respectively.
+دغه درې پېژندونه د پښتنو د پلرني نسب، ژبتوکميز، او مذهبي کلتوري پېژند په توګه څرګندونه کوي.
 
 ===توکميزه پېژندنه===
-[[Image:Afghan girl Pashtun.JPEG|right|150px|thumb|A Pashtun girl from Afghanistan]]
+[[انځور:Afghan girl Pashtun.JPEG|کيڼ|150px|thumb|د افغانستان يوه پښتنه انجلۍ]]
 The ethno-linguistic definition is the most prominent and accepted view as to who is and is not a Pashtun.<ref name="Library of Congress Pakhtuns">[http://lcweb2.loc.gov/cgi-bin/query/r?frd/cstdy:@field(DOCID+pk0053) Pakistan: Pakhtuns] ''US Library of Congress'' (retrieved 18 January 2007).</ref> Generally, this most common view holds that Pashtuns are defined within the parameters of having mainly eastern Iranian ethnic origins, sharing a common language, culture and history, living in relatively close geographic proximity to each other, and acknowledging each other as kinsmen. Thus, tribes that speak disparate yet mutually intelligible dialects of Pashto will acknowledge each other as ethnic Pashtuns and even subscribe to certain dialects as "proper", such as the Pukhtu spoken by the [[Yusufzai|Yousafzai]] and the Pashto spoken by the [[Durrani]] in Kandahar.<ref name="Translation Center: Pashto">[http://www.nvtc.gov/lotw/months/february/pashto.html#dial Pashto] ''National Virtual Translation Center'' (retrieved 18 January 2007).</ref> These criteria tend to be used by most Pashtuns in Pakistan and Afghanistan as the basis for who can be counted as a Pashtun.
 
 ===کلتوري پېژندنه===
