فارسی سازی ارقام

--- a/پښتانه.mw
+++ b/پښتانه.mw
@@ -123,10 +123,10 @@ Throughout Pashtun history, poets, prophets, kings and warriors have been amongs
 Despite the general male dominance of Pashto oral [[storytelling|story-telling]], Pashtun society is also marked by some [[matriarchy|matriarchal]] tendencies.<ref name="Pashtun poetess">[http://www.boston.com/news/globe/ideas/articles/2005/05/22/the_tale_of_the_pashtun_poetess/?rss_id=Boston+Globe+--+Ideas+Section The tale of the Pashtun poetess], Leela Jacinto, ''The Boston Globe'', May 22, 2005 (retrieved 18 January 2007).</ref> Folktales involving reverence for Pashtun mothers and matriarchs are common and are passed down from parent to child, as is most Pashtun heritage, through a rich [[oral tradition]] that has survived the ravages of time.
 
 ===پښتونولي===
-{{main|Pashtunwali}}
-The term "Pakhto" or "Pashto" from which the Pashtuns derive their name is not merely the name of their language, but is synonymous with a pre-Islamic honor code/religion formally known as [[Pashtunwali]] (or ''Pakhtunwali'').<ref name="Pakhtunwali">[http://www.afghanan.net/pashto/pashtunwali/pashtunwali.htm Pakhtunwali], Afghanan dot net (retrieved 18 January 2007).</ref> Pashtunwali is believed to have originated millennia ago during pagan times and has, in many ways, fused with Islamic tradition.<ref name="Pashtunwali">[http://afghanland.com/culture/pashtunwali.html Pashtunwali: The Way of the Pashtuns], ''Afghanland.com'' (retrieved 18 January 2007).</ref> Pashtunwali governs and regulates nearly all aspects of Pashtun life ranging from tribal affairs to individual "honor" (''nang'') and behavior.
+{{main|پښتونولي}}
+The term "Pakhto" or "Pashto" from which the Pashtuns derive their name is not merely the name of their language, but is synonymous with a pre-Islamic honor code/religion formally known as [[Pashtunwali]] (or ''Pakhtunwali'').<ref name="Pakhtunwali">[http://www.afghanan.net/pashto/pashtunwali/pashtunwali.htm Pakhtunwali], Afghanan dot net (retrieved ۱۸ January ۲۰۰۷).</ref> Pashtunwali is believed to have originated millennia ago during pagan times and has, in many ways, fused with Islamic tradition.<ref name="Pashtunwali">[http://afghanland.com/culture/pashtunwali.html Pashtunwali: The Way of the Pashtuns], ''Afghanland.com'' (retrieved ۱۸ January ۲۰۰۷).</ref> Pashtunwali governs and regulates nearly all aspects of Pashtun life ranging from tribal affairs to individual "honor" (''nang'') and behavior.
 
-There are numerous intricate tenets of Pashtunwali that influence Pashtun social behavior. One of the better known tenets is ''Melmastia'' or the notion of hospitality and asylum to all guests seeking help. Perceived wrongs or injustice call for ''Badal'' or swift [[revenge]]. A popular Pashtun saying, "Revenge is a dish best served cold", was borrowed by the British and popularized in the [[Western world|West]].<ref name="ISBN Insight Guide Pakistan">Halliday, Tony (ed.). 1998. ''Insight Guide Pakistan'', Duncan, South Carolina: Langenscheidt Publishing Group. ISBN 0887297366 (retrieved 19 February 2007).</ref> Men are expected to protect ''Zan, Zar, Zameen'', which translates to women, treasure, and land. Some aspects promote peaceful co-existence such as ''Nanawati'' or the humble admission of guilt for a wrong committed, which should result in automatic forgiveness from the wronged party. These and other basic precepts of Pashtunwali continue to be followed by many Pashtuns, especially in rural areas.
+There are numerous intricate tenets of Pashtunwali that influence Pashtun social behavior. One of the better known tenets is ''Melmastia'' or the notion of hospitality and asylum to all guests seeking help. Perceived wrongs or injustice call for ''Badal'' or swift [[revenge]]. A popular Pashtun saying, "Revenge is a dish best served cold", was borrowed by the British and popularized in the [[Western world|West]].<ref name="ISBN Insight Guide Pakistan">Halliday, Tony (ed.). ۱۹۹۸. ''Insight Guide Pakistan'', Duncan, South Carolina: Langenscheidt Publishing Group. ISBN ۰۸۸۷۲۹۷۳۶۶ (retrieved ۱۹ February ۲۰۰۷).</ref> Men are expected to protect ''Zan, Zar, Zameen'', which translates to women, treasure, and land. Some aspects promote peaceful co-existence such as ''Nanawati'' or the humble admission of guilt for a wrong committed, which should result in automatic forgiveness from the wronged party. These and other basic precepts of Pashtunwali continue to be followed by many Pashtuns, especially in rural areas.
 
 ===ورځښت===
 Traditional sports include ''naiza bazi'', which involves horsemen who compete in spear throwing.<ref>[http://www.everyculture.com/wc/Afghanistan-to-Bosnia-Herzegovina/Pashtun.html Pashtun Sports], ''World Cultures'' (retrieved 18 January 2007).</ref>
