فارسی سازی ارقام

--- a/پښتانه.mw
+++ b/پښتانه.mw
@@ -112,10 +112,10 @@ Fluency in Pashto is often the main determinant as to whether there is group acc
 Pashto has [[national language|national status]] in Afghanistan and [[regional language|regional status]] in Pakistan. In addition to their mother-tongue, many Pashtuns are fluent in [[Dari (Afghanistan)|Dari]] (Afghan Persian) and/or [[Urdu]] as well as English.
 
 ===دين===
-{{main|Islam in Afghanistan|Islam in Pakistan}}
-د پښتنو په لويه کچه سُني مسلمانان دي او د حنفي مذهب لارويان دي. د پښتنو يوه وړه برخه شعيه مسلمانان هم جوړوي چې هم په افغانستان او هم پاکستان کې داسې وړې مذهبي ډلګۍ شته.<ref name="US Library of Congress: Afghanistan Ethnic Groups">[http://lcweb2.loc.gov/cgi-bin/query/r?frd/cstdy:@field(DOCID+af0037) Pashtun] ''US Library of Congress'' (retrieved 18 January 2007).</ref>
+{{main|اسلام په افغانستان کې|اسلام په پاکستان کې}}
+پښتانه په لويه کچه سُني مسلمانان دي او د حنفي مذهب لارويان دي. د پښتنو يوه وړه برخه شعيه مسلمانان هم جوړوي چې هم په افغانستان او هم پاکستان کې داسې وړې مذهبي ډلګۍ شته.<ref name="د امريکا د کانګرېس کتابتون: د افغانستان توکميزې ډلې">[http://lcweb2.loc.gov/cgi-bin/query/r?frd/cstdy:@field(DOCID+af0037) پښتون] ''د امريکا د کانګرېس کتابتون'' (retrieved ۱۸ جنوري ۲۰۰۷).</ref>
 
-Studies conducted amongst the [[Ghilzai]] reveal strong linkages between tribal affiliation and membership in the larger [[ummah]] (Islamic community), as most Pashtuns believe that they are descendants of the aforementioned [[Qais Abdur Rashid]] who is purported to have been an early convert to Islam and thus bequeathed the faith to the entire Pashtun population.<ref name="Afghanistan religion">[http://www.gl.iit.edu/govdocs/afghanistan/Religion.html Meaning and Practice], ''Afghanistan Country Study: Religion'', [[Illinois Institute of Technology]] (retrieved 18 January 2007).</ref> A legacy of [[Sufism|Sufi]] activity remains common in Pashtun regions as evident in song and dance. Many Pashtuns are prominent [[Ulema]], or Islamic scholars, such as [[Muhammad Muhsin Khan|Dr. Muhammad Muhsin Khan]] who translated the [[Noble Qur'an (Hilali-Khan)|Noble Quran]] and [[Sahih Bukhari|Sahih Al-Bukhari]] and many other books into English.<ref name="Noble Quran">[http://firstedition.com.my/the%20noble%20quran.htm ''The Noble Quran'' (in 9 VOLUMES), Arabic-English], (ed. Dr. Muhammad Muhsin Khan) (retrieved 18 January 2007).</ref> Lastly, non-Muslim Pashtuns are virtually non-existent as there is limited data regarding [[irreligion|irreligious]] groups and minorities.
+Studies conducted amongst the [[Ghilzai]] reveal strong linkages between tribal affiliation and membership in the larger [[ummah]] (Islamic community), as most Pashtuns believe that they are descendants of the aforementioned [[Qais Abdur Rashid]] who is purported to have been an early convert to Islam and thus bequeathed the faith to the entire Pashtun population.<ref name="Afghanistan religion">[http://www.gl.iit.edu/govdocs/afghanistan/Religion.html مانا او عمل], ''Afghanistan Country Study: مذهب'', [[د الينيوس تخنيکي انستيتيوت]] (retrieved ۱۸ جنوري ۲۰۰۷).</ref> A legacy of [[Sufism|Sufi]] activity remains common in Pashtun regions as evident in song and dance. ډېر پښتانه نامتو ديني عالمان هم دي لکه [[محمد مُحسن خان|ډاکټر محمد مُحسن خان]] چې قرآن شريف يې انګريزي ته ژباړلی دی په همدې توګه [[صحيح بخاري|صحيح البخاري]] او ډېری نور ديني کتابونه هم انګريزي ته ژباړل شوي.<ref name="Noble Quran">[http://firstedition.com.my/the%20noble%20quran.htm ''The Noble Quran'' (په ۹ ټوکونو کې), Arabic-English], (ed. Dr. Muhammad Muhsin Khan) (retrieved ۱۸ جنوري ۲۰۰۷).</ref> Lastly, non-Muslim Pashtuns are virtually non-existent as there is limited data regarding [[irreligion|irreligious]] groups and minorities.
 
 ===پښتو ادبيات===
 Throughout Pashtun history, poets, prophets, kings and warriors have been amongst the most revered members of society. For much of Pashtun history, literature has not played a major role as [[Persian literature|Persian]] was the literary ''[[lingua franca]]'' used for communication purposes by neighboring peoples and generally relied upon for writing purposes. However, by the 16th century early written records of Pashto began to appear, the earliest of which describes Sheikh Mali's conquest of [[Swat (princely state)|Swat]].<ref name="UCLA">[http://www.afghan-network.net/Ethnic-Groups/pashtu-history.html History of Pushto language], ''UCLA Language Materials Project'' (retrieved 18 January 2007).</ref> The advent of Pashto poetry and the revered works of [[Khushal Khan Khattak]] and [[Rahman Baba]] in the 17th century helped transition Pashto towards the modern period.<ref name="Rahman Baba">[http://www.pashto.org/content/view/12/26/ Rahman Baba: Poet of the Pashtuns] ''Pashto.org'' (retrieved 18 January 2007)</ref> In the 20th century, Pashto literature gained significant prominence with the poetic works of [[Ameer Hamza Shinwari]] who was noted for his development of ''Pashto Ghazals''.<ref name="Shinwari Baba">[http://www.khyber.org/people/literary/AmirHamzaShinwariBaba.shtml Amir Hamza Shinwari Baba], ''Khyber.org'' (retrieved 18 January 2007).</ref> In recent times, Pashto literature has received increased patronage, but due to relatively high illiteracy rates, many Pashtuns continue to rely upon the oral tradition. Pashtun males continue to meet at ''chai khaana''s or tea cafes to listen and relate various oral tales of valor and history.
