*Empty MediaWiki Message*

--- a/چنگېز_خان.mw
+++ b/چنگېز_خان.mw
@@ -8,7 +8,7 @@
 چنګېز خان د نني چين په ګډون ټوله منګوليا، اېرواسيا، د روسيې ډېره برخه، اسيا، ختيځه اروپا او منځني ختيځ ډېرې سيمې ترخپلې ولكې لاندې راوستې وې. 
 تيموجن (جنګېز خان) د يوې نامالومه ناروغۍ له وجې په ۱۲۲۷ز كال ومړ.  
 
-</ref>&ndash;[[August 18]], [[1227]]) born '''Temujin''' was the founder, ''[[Khan]]'' (ruler) and posthumously declared ''[[Khagan]]'' (emperor<ref>Conferred posthumously by his son [[Ögedei Khan]] when he took the new title</ref> 
+</<ref>&ndash;[[August 18]], [[1227]]) born '''Temujin''' was the founder, ''[[Khan]]'' (ruler) and posthumously declared ''[[Khagan]]'' (emperor<ref>Conferred posthumously by his son [[Ögedei Khan]] when he took the new title</ref> 
 
 
 
