/* Childhood and Family */

--- a/چنگېز_خان.mw
+++ b/چنگېز_خان.mw
@@ -26,8 +26,8 @@ No accurate portraits of Genghis exist today, and any surviving depictions are c
 {{main|Family tree of Genghis Khan}}
 Temüjin was related on his father's side to [[Qabul Khan]], [[Ambaghai]] and [[Qutula Khan]] who had headed the [[Mongol]] confederation. When the [[Jin Dynasty (1115–1234)|Jin dynasty]] switched support from the Mongols to the [[Tatar]]s in 1161 they destroyed Qabul Khan.<ref>{{cite book|first=Paul|last=Ratchnevsky|title=Genghis Khan: His Life and Legacy|publisher=Blackwell Publishing|date=1991|id=ISBN 0-631-16785-4|pages=9-10}}</ref> Genghis' father, [[Yesükhei]] (leader of the [[Borjigin]] and nephew to Ambaghai and Qutula Khan) emerged as the head of the ruling clan of the Mongols, but this position was contested by the rival [[Tayichi’ud]] clan, who descended directly from [[Ambaghai]]. When the Tatars grew too powerful after 1161, the Jin moved their support from the Tatars to the Kerait.
 
-===Childhood and Family===
-<!--[[Image:MongolianGer.jpg|thumb|left|230px|Modern Mongolian ger ([[yurt]])]]-->
+===کورنۍ او ماشومتوب===
+<!--[[انځور:MongolianGer.jpg|thumb|کيڼ|230px|Modern Mongolian ger ([[yurt]])]]-->
 ====Early life====
 Temüjin had three brothers, Khasar (or [[Jöchi Khasar|Qasar]]), Khajiun, and [[Temüge]], and one sister, Temülen (or Temülin), as well as two half-brothers, [[Bekhter]] and [[Belgutei]].
 
