robot  Modifying: [[tr:Gökbilim]]

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -509,7 +509,7 @@ Although the scientific discipline of astronomy has made tremendous strides in u
 [[ti:አስትሮኖሚ]]
 [[tl:Astronomiya]]
 [[tpi:Estronomi]]
-[[tr:Gök Bilimi]]
+[[tr:Gökbilim]]
 [[uk:Астрономія]]
 [[vec:Astronomia]]
 [[vi:Thiên văn học]]
