robot  Modifying: [[tr:İbn Rüşd]]

--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -126,7 +126,7 @@
 [[sr:Ибн Рушд]]
 [[sv:Averroës]]
 [[th:อิบุน รัชด์]]
-[[tr:İbn Rüşt]]
+[[tr:İbn Rüşd]]
 [[uk:Аверроес]]
 [[ur:ابن رشد]]
 [[vi:Averroes]]
