--- a/محمد_ابراهيم_خواخوږى.mw
+++ b/محمد_ابراهيم_خواخوږى.mw
@@ -123,7 +123,7 @@
 ياد يې تل اروا يې ښاده
 
 
-[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:پښتانه ليکوالان]]
 [[وېشنيزه:پښتانه شاعران]]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:افغانان]]
