robot  Modifying: [[es:Bahaísmo]]

--- a/بهايي.mw
+++ b/بهايي.mw
@@ -235,7 +235,7 @@
 [[el:Μπαχάι Πίστη]]
 [[en:Bahá'í Faith]]
 [[eo:Bahaa Kredo]]
-[[es:Fe bahá'í]]
+[[es:Bahaísmo]]
 [[et:Baha'i usk]]
 [[eu:Bahaismo]]
 [[fa:دین بهائی]]
