--- a/بحرین.mw
+++ b/بحرین.mw
@@ -360,6 +360,7 @@ The first institution of higher education in Bahrain, the Gulf Polytechnic, was 
 [[ro:Bahrain]]
 [[ru:Бахрейн]]
 [[sa:बहरैन]]
+[[sah:Баhрейн]]
 [[scn:Bahrain]]
 [[se:Bahrain]]
 [[sh:Bahrein]]
