--- a/بنګله_دیش.mw
+++ b/بنګله_دیش.mw
@@ -434,6 +434,7 @@ Bangladesh has eleven National Holidays, based on three separate calendars: [[Gr
 [[ro:Bangladesh]]
 [[ru:Бангладеш]]
 [[sa:बंगलादेश]]
+[[sah:Баҥладеш]]
 [[scn:Bangladesci]]
 [[se:Bangladesh]]
 [[sh:Bangladeš]]
