--- a/غرزی_خواخوږی.mw
+++ b/غرزی_خواخوږی.mw
@@ -23,7 +23,6 @@
 #په ورځپاڼو او مجلو کي يو شمير مقالي او مضامين
 
 
-[[وېشنيزه:پښتانه]]
 [[وېشنيزه:پښتانه ليکوالان]]
-[[وېشنيزه:پښتانه سياستوال]]
+[[وېشنيزه:سياستوال]]
 [[وېشنيزه:افغانان]]
