--- a/سویډن.mw
+++ b/سویډن.mw
@@ -6,7 +6,7 @@
 |conventional_long_name = Kingdom of Sweden
 |عام نوم = سويډن
 |بېرغ = Flag of Sweden.svg
-|نښان = Sweden_greater_coa1908.png
+|نښان = Coat of Arms of Sweden.svg
 |symbol_type = Coat of arms
 |نخشه = LocationSweden.png
 |national_motto = ''För Sverige i tiden''<sup>1</sup><br />([[English language|English]]: "For Sweden, with the times")
