*Empty MediaWiki Message*

--- a/هوږه.mw
+++ b/هوږه.mw
@@ -5,3 +5,7 @@
 هوږه تېز بوى لري او له خولې نه ژر نه لري كيږي ، همدا يواځينى لامل دى چې ډېرى وختونه انسان د تازه او اومې هوږې له خوراك نه ډډه كوي. 
 ژباړن : اوڅار افغان .
 سرچينه : ګ . پ . شالاېووا ، و . پ . سيتنيكوف ، ت . م . كولياديچ. د ټوليزو مالوماتو انسكلوپېډيا، ۱۶ ټوك ، ۸۵ – ۸۸ مخونه ، د ۱۹۹۹ ز كال ماسكو چاپ.
+
+
+
+[[en:Garlic]]
