*Empty MediaWiki Message*

--- a/هوږه.mw
+++ b/هوږه.mw
@@ -8,4 +8,72 @@
 
 
 
-[[en:Garlic]]
+
+[[وېشنيزه:Allium]]
+[[وېشنيزه:Herbs]]
+[[وېشنيزه:طبي بوټي]]
+[[وېشنيزه:Root vegetables]]
+[[وېشنيزه:Antifungals]]
+[[وېشنيزه:Mediterranean cuisine]]
+
+[[ar:ثوم]]
+[[ay:Ajusa]]
+[[zh-min-nan:Soàn-thâu]]
+[[bs:Bijeli luk]]
+[[bg:Чесън]]
+[[ca:All]]
+[[cs:Česnek kuchyňský]]
+[[cy:Garlleg]]
+[[da:Hvidløg]]
+[[de:Knoblauch]]
+[[dv:ލޮނުމެދު]][[en:Garlic]]
+[[et:Küüslauk]]
+[[el:Σκόρδο]]
+[[es:Allium sativum]]
+[[eo:Ajlo]]
+[[eu:Baratxuri]]
+[[fa:سیر (گیاه)]]
+[[fr:Ail cultivé]]
+[[fur:Ai]]
+[[gl:Allo]]
+[[zh-classical:蒜]]
+[[ko:마늘]]
+[[hi:लहसुन]]
+[[hsb:Prawy kobołk]]
+[[id:Bawang putih]]
+[[it:Allium sativum]]
+[[he:שום]]
+[[ht:Lay]]
+[[la:Allium]]
+[[lb:Knuewelek]]
+[[lt:Valgomasis česnakas]]
+[[hu:Fokhagyma]]
+[[ml:വെളുത്തുള്ളി]]
+[[ms:Bawang putih]]
+[[nl:Knoflook]]
+[[ja:ニンニク]]
+[[no:Hvitløk]]
+[[oc:Alh cultivat]]
+[[pl:Czosnek pospolity]]
+[[pt:Alho]]
+[[ro:Usturoi]]
+[[qu:Ahus]]
+[[ru:Чеснок]]
+[[sq:Hudhra]]
+[[scn:Agghia]]
+[[simple:Garlic]]
+[[sk:Cesnak kuchynský]]
+[[sl:Česen]]
+[[sr:Бели лук]]
+[[fi:Valkosipuli]]
+[[sv:Vitlök]]
+[[tl:Bawang]]
+[[th:กระเทียม]]
+[[vi:Tỏi]]
+[[tg:Сирпиёз]]
+[[tr:Sarımsak]]
+[[uk:Часник]]
+[[ur:لہسن]]
+[[wa:A (plante)]]
+[[yi:קנאבל]]
+[[zh:大蒜]]
