--- a/هوږه.mw
+++ b/هوږه.mw
@@ -1,4 +1,20 @@
-په دې وروستيو كې په ډېرو هېوادو كې د كيمياوي دارو درملو پر ځاى طبيعي داروګان ډېر كارول كيږي. پوهان وايي چې اوسنى انسان د لرغوني انسان په پرتله د بدن پاكولو ته ډېره اړتيا لري؛ ځكه خو بايد دده په خواړو كې سابه ، تركاري ، په تېره بيا هوږه ، چې په خپلې ميكروبي او باكتريايي ضد ځانګړنې سره مشهوره ده ، شتوالى ولري. 
+{{taxobox
+|name = Garlic
+|image = Allium sativum Woodwill 1793.jpg
+|image_caption = ''Allium sativum'', known as garlic, from William Woodville, ''Medical Botany'', 1793.
+|regnum = [[Plantae]]
+|unranked_divisio = [[Angiosperms]]
+|unranked_classis = [[Monocots]]
+|ordo = [[Asparagales]]
+|familia = [[Alliaceae]]
+|subfamilia = Allioideae
+|tribus = Allieae
+|genus = ''[[Allium]]''
+|species = '''''A. sativum'''''
+|binomial = ''Allium sativum''
+|binomial_authority = [[Carolus Linnaeus|L.]]
+|}}
+
 هوږه د پيازو له نسله ( Allium ) ګڼل كيږي. هغه په خپل تركيب كې د شتو موادو لكه البومينو ، قندو ، عضوي تېزابو ، منرالي مالګو ( په ټوليزه توګه د كاليوم پوتاشيم او مګنيزم ) ، د B او C ګروپونو ويټامينونو ، يد ( يود ) ، سلولوز ، د اثيرو ( ايترو ) غوړو په لرلو سره سارى نه لري. له هوږې نه د والګي ، د ګېډي ساري ناروغۍ ، د نو لرونكو ټپونو او دانو ، په بدن كې د ويټامينونو د كموالي د وقايې او درملنې لپاره كار اخيستل كيږي ؛ همدا راز د غاښو د ناروغۍ اسقربوط \" څينګه \" مخنيوى كوي او د بدن دفاعي سيستم \"ايمونيتېت\" پياوړى كوي. هوږه د وبا ( كولرا ) ، \"سالمونېلېزا\" او لويې تبې ( محرقې ) په درملنه كې اغېزمنه ده. 
 د سابو او تركاريو روغتيايي ځانګړنې انسانانو ته له پخوا نه جوتې وې. هغوى د كاربن هايدريتونو ، ويټامينونو او منرالي موادو د سرچينې په توګه چوپړ كاوه ، چې تر ټولو نه په لوړه كچه يې په هوږې پورې اړه لرله او لري يې. د هغې د روغتيايي ( طبي ) ځانګړنو نه لا لرغوني مصريان هم خبر وو ، چې له ميلاد نه درې زره كاله مخكې يې لا په خوړو كې له پيازو او هوږې نه كار اخيست. پرته له مصريانو نه ، د نړۍ په نورو لرغونو تمدنونو كې هم د هوږې له ګټو نه خبر وو. د بېلګې په توګه د مراكش پاچا دوهم \" بالادان \" په نړيوال تاريخ كې د هوږې او پيازو د پالېز په لرلو سره نامتو دى. پاچا \" بالادان \" ته خپل د هوږې او پيازو پالېز دومره ګران و ، چې ان معبد ته يې هم اجازه ورنكړه ، چې د هغه پر ځاى ودان شي ، تر څو چې يې د سابو او تركاريو بل لوى پالېز سمسور نكړ. 
 پر روغتيايي ځانګړنو سربېره ، هوږه د خواړو د يوې ډېرې خوندورې او په زړه پورې مسالې په توګه نامتو وه او ده. اوس هم په بېلابېلو هېوادو كې د ساوس ( روب ) ، سلاټې په جوړولو كې ، همدا راز د قورمې ، پټاټو ، غوښې ، پلو ، د مرغانو غوښې ، ښوروا ، سوپ او نورو بېلابېلو خواړو په پخلي كې د خواړو د لا خوندوركولو لپاره ترې كار اخيستل كيږي. هوږه تازه هم خوړل كيږي ، همدا راز له هغې نه اچار ( ترشي ) هم جوړوي چې له خوړو سره يې كارونه اشتها زياتوي. د هوږې شنې اوږدې پاڼې د B له ويټامينو شتمنې دي چې سلاټ ترې جوړوي او په ځينو هېوادو كې اچار هم ترې جوړوي. په نړۍ كې هسپانويان د هوږې تر ټولو ډېر لوى مينه وال ګڼل كيږي او په نړۍ كې د هوږې تر ټولو ډېر لوى توليدوونكي هم دوى دي. 
