*Empty MediaWiki Message*

--- a/هوږه.mw
+++ b/هوږه.mw
@@ -1,5 +1,5 @@
 {{taxobox
-|name = Garlic
+|name = هوږه
 |image = Allium sativum Woodwill 1793.jpg
 |image_caption = ''Allium sativum'', known as garlic, from William Woodville, ''Medical Botany'', 1793.
 |regnum = [[Plantae]]
