*Empty MediaWiki Message*

--- a/وزلوبه.mw
+++ b/وزلوبه.mw
@@ -6,3 +6,7 @@
 د وزلوبې د ترسره كولو لپاره، اتل يا لوبغاړې چې د (چاپ انداز) په نامه يادېږي، په سورلۍ كې لوى لاس لري او له ستونزومنو تمرينونو څخه وروسته په لوبو كې د ګډون ځواكمنتيا ترلاسه كوي. د وزلوبې د لوبې وسيله يو خوسى وي، چې له حلالولو او د نس له پاكولو وروسته هغه د څلرويشتو ساعتونو لپاره د اوبو په منځ كې كېښودل كېږي، چې د پوستكي مقاومت يې ډېر شي، او بيا يې د لوبې په بهير كې ونه شلېږي. د خوسي وزن له ۳۰ څخه تر ۴۵ كيلوګرامو پورې وي. د وزلوبې د ډګر سيمه ناټاكلې وي، خو د افغانستان د اولمپېك د رياست لخوا د مېدان د بر برخه ۳۵۰*۳۵۰ مربع متره او اوږدوالې يې ۳۵۰*۳۰۰ متره ټاكل شوې دى.
 
 لوبه په عمومي ورزشي لوبغالو (د فوټبال د مېدان په مساحت) او په سټېډيمونو كې هم ترسره كېداى شي. د وزلوبې په مېدان كې د پورته كولو، د حلال او توغ داېرې د پام وړ ځايونه وي. خوسې د پورته كولو د ځاى (داېره) په منځ كې وي، او په اسونو سپاره لوبغاړي د هغه په شاوخوا راټولېږي. د مېدان دمشر په لارښوونه د خوسي د پورته كولو لپاره هلې ځلې پېل كېږي.
+
+
+
+[[fa:بزکشی]]
