*Empty MediaWiki Message*

--- a/وزلوبه.mw
+++ b/وزلوبه.mw
@@ -9,4 +9,22 @@
 
 
 
+
+
+[[da:Buzkashi]]
+[[de:Buzkashi]]
+[[en:Buzkashi]]
+[[es:Buzkashi]]
 [[fa:بزکشی]]
+[[fr:Bouzkachi]]
+[[he:בוזקאשי]]
+[[it:Buzkashi]]
+[[ja:ブズカシ]]
+[[mr:बुझकाशी]]
+[[nl:Buzkashi]]
+[[no:Buzkashi]]
+[[pl:Buzkaszi]]
+[[pt:Buzkashi]]
+[[ro:Buzkaşi]]
+[[sv:Buzkashi]]
+[[tr:Buzkaşi]]
