فارسی سازی ارقام

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -45,28 +45,28 @@
   | title=Curions Abouit Astronomy: What's the difference between astronomy and astrophysics?
   | url=http://curious.astro.cornell.edu/question.php?number=30
   | author=B. Scharringhausen
-  | accessdate=2007-06-20}}</ref><ref name="odenwald">{{cite web
+  | accessdate=۲۰۰۷-۰۶-۲۰}}</ref><ref name="odenwald">{{cite web
   | title=Archive of Astronomy Questions and Answers: What is the difference between astronomy and astrophysics?
   | url=http://www.astronomycafe.net/qadir/q449.html
   | author=S. Odenwald
-  | accessdate=2007-06-20}}</ref><ref name="pennstateerie">{{cite web
+  | accessdate=۲۰۰۷-۰۶-۲۰}}</ref><ref name="pennstateerie">{{cite web
   | title=Penn State Erie-School of Science-Astronomy and Astrophysics
   | url=http://www.erie.psu.edu/academic/science/degrees/astronomy/astrophysics.htm
-  | accessdate=2007-06-20}}</ref>  د يو کره سيند (قاموس) د پېژند له مخې، "ستورپوهنه" يا "آسټرونومي هغې پوهې ته وايي چې د زمکې د اتموسفير نه دباندې د مادې او نورو اسماني شيانو د کتنو او پېژندلو سره سره د هغوی د فيزيکي او کيميايي ځانګړتياو په هکله څېړنې او بحثونه کوي."<ref name="mw-astronomy">{{cite web
+  | accessdate=۲۰۰۷-۰۶-۲۰}}</ref>  د يو کره سيند (قاموس) د پېژند له مخې، "ستورپوهنه" يا "آسټرونومي هغې پوهې ته وايي چې د زمکې د اتموسفير نه دباندې د مادې او نورو اسماني شيانو د کتنو او پېژندلو سره سره د هغوی د فيزيکي او کيميايي ځانګړتياو په هکله څېړنې او بحثونه کوي."<ref name="mw-astronomy">{{cite web
   | title=Merriam-Webster Online
   | work=Results for "astronomy".
   | url=http://www.m-w.com/dictionary/astronomy
-  | accessdate=2007-06-20}}</ref>او د "آسټروفيزيکس" کلمه "د ستورپوهنې هغې څانګې ته وايي کوم چې د فلکي شيانو او ځليزو (فېنامېنا) د فيزيکي ځانګړنو، خاصيتونه او د هغوی خوځنده کړنو په هکله څېړنې کوي او همدغو ځانګړنو پورې اړونده پوښتنو ته ځواب وايي."<ref name="mw-astrophysics">{{cite web
+  | accessdate=۲۰۰۷-۰۶-۲۰}}</ref>او د "آسټروفيزيکس" کلمه "د ستورپوهنې هغې څانګې ته وايي کوم چې د فلکي شيانو او ځليزو (فېنامېنا) د فيزيکي ځانګړنو، خاصيتونه او د هغوی خوځنده کړنو په هکله څېړنې کوي او همدغو ځانګړنو پورې اړونده پوښتنو ته ځواب وايي."<ref name="mw-astrophysics">{{cite web
   | title=Merriam-Webster Online
   | work=Results for "astrophysics".
   | url=http://www.m-w.com/dictionary/astrophysics
-  | accessdate=2007-06-20}}</ref>  په ځينو ځاينو کې، لکه د [[فرانک شو]] د کتاب '''''فيزيکي کاينات''''' په پېژندګلوي کې راغلي چې، "ستورپوهنه" د يو موضوع د کيفيتي زده کړو په راپېژندلو کې کارېږي خو "آسټروفيزيکس" بيا پر فيزيک مبنا د يو موضوع د بڼې په پېژندنه کې کارېږي.<ref name="shu1982">{{cite book
+  | accessdate=۲۰۰۷-۰۶-۲۰}}</ref>  په ځينو ځاينو کې، لکه د [[فرانک شو]] د کتاب '''''فيزيکي کاينات''''' په پېژندګلوي کې راغلي چې، "ستورپوهنه" د يو موضوع د کيفيتي زده کړو په راپېژندلو کې کارېږي خو "آسټروفيزيکس" بيا پر فيزيک مبنا د يو موضوع د بڼې په پېژندنه کې کارېږي.<ref name="shu۱۹۸۲">{{cite book
   | author = F. H. Shu
   | title = The Physical Universe
   | publisher = University Science Books
-  | date = 1982
+  | date = ۱۹۸۲
   | location = Mill Valley, California
-  | id = ISBN 0-935702-05-9}}</ref>  However, since most modern astronomical research deals with subjects related to physics, modern astronomy could actually be called astrophysics.<ref name="scharrinhausen"/>  Various departments that research this subject may use "astronomy" and "astrophysics", partly depending on whether the department is historically affiliated with a physics department,<ref name="odenwald"/> and many professional astronomers actually have physics degrees.<ref name="pennstateerie"/>  Even the name of the scientific journal [[Astronomy & Astrophysics]] reveals the ambiguity of the use of the term.
+  | id = ISBN ۰-۹۳۵۷۰۲-۰۵-۹}}</ref>  خو د هر څه سره سره، دا چې نوې ستورپوهنيزې څېړنې د فيزيک اړونده سکالوګانو سره سروکار لري، نو په همدې توګه نوې ستورپوهنه هم بايد آسټروفيزيکس يا ستورپږنپوهنه وبللای شي.<ref name="scharrinhausen"/>  Various departments that research this subject may use "astronomy" and "astrophysics", partly depending on whether the department is historically affiliated with a physics department,<ref name="odenwald"/> and many professional astronomers actually have physics degrees.<ref name="pennstateerie"/>  Even the name of the scientific journal [[Astronomy & Astrophysics]] reveals the ambiguity of the use of the term.
 
 ==تاريخ==
 {{main|د ستورپوهنې تاريخ}}
