--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -66,7 +66,7 @@
   | publisher = University Science Books
   | date = ۱۹۸۲
   | location = Mill Valley, California
-  | id = ISBN ۰-۹۳۵۷۰۲-۰۵-۹}}</ref>  خو د هر څه سره سره، دا چې نوې ستورپوهنيزې څېړنې د فيزيک اړونده سکالوګانو سره سروکار لري، نو په همدې توګه نوې ستورپوهنه هم بايد آسټروفيزيکس يا ستورپږنپوهنه وبللای شي.<ref name="scharrinhausen"/>  بېلابېلې څانګې چې په همدې موضوع څېړنې ترسره کوي، کېدای شي د "ستورپوهنې" او "ستورپږنپوهنې" وکاروي او دا هم څه نا څه په دغه حقيقت پورې اړونده خبر ده چې آيا يوه څانګه په تاريخي توګه د فيزيک د څانګې سره پر کار اخته ده،<ref name="odenwald"/> او د ستورپوهنې ډېری کارپوهان په اصل کې د فيزيک بريليک لري.<ref name="pennstateerie"/>  آن ساينسي رسنۍ [[آسټرونومي اېنډ آسټروفيزيکس]] هم د دغو اصطلاحګانو د ناڅرګندتوب په ډاګه کولو يوه هڅه کړې.
+  | id = ISBN ۰-۹۳۵۷۰۲-۰۵-۹}}</ref>  خو د هر څه سره سره، دا چې نوې ستورپوهنيزې څېړنې د فيزيک اړونده سکالوګانو سره سروکار لري، نو په همدې توګه نوې ستورپوهنه هم بايد آسټروفيزيکس يا ستورپږنپوهنه وبللای شي.<ref name="scharrinhausen"/>  بېلابېلې څانګې چې په همدې موضوع څېړنې ترسره کوي، کېدای شي د "ستورپوهنې" او "ستورپږنپوهنې" اصطلاحګانې وکاروي او دا هم څه نا څه د دغه حقيقت پخاطر چې يوه څانګه په تاريخي توګه د فيزيک د څانګې سره څومره پر کار اخته ده.<ref name="odenwald"/> د ستورپوهنې ډېری کارپوهان په اصل کې د فيزيک بريليک لري.<ref name="pennstateerie"/>  آن ساينسي رسنۍ [[آسټرونومي اېنډ آسټروفيزيکس]] هم د دغو اصطلاحګانو د ناڅرګندتوب په ډاګه کولو يوه هڅه کړې.
 
 ==تاريخ==
 {{main|د ستورپوهنې تاريخ}}
