--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -70,17 +70,17 @@
 
 ==تاريخ==
 {{main|د ستورپوهنې تاريخ}}
-{{see|Archaeoastronomy}}
-[[Image:Planisphæri cœleste.jpg|thumb|200 px|A celestial map from the 17th century, by the Dutch cartographer Frederik de Wit.]]
-In early times, astronomy only comprised the observation and predictions of the motions of objects visible to the naked eye. In some locations, such as [[Stonehenge]], early cultures assembled massive artifacts that likely had some astronomical purpose. In addition to their ceremonial uses, these observatories could be employed to determine the seasons, an important factor in knowing when to plant crops, as well as in understanding the length of the year.<ref name="history">{{cite book | author=George Forbes | title=History of Astronomy | publisher=Watts & Co. | location=London  | year=1909 | format =Free e-book from [[Project Gutenberg]] | url=http://www.gutenberg.org/etext/8172 }}</ref>
+{{see|زړه ستورپوهنه}}
+[[انځور:Planisphæri cœleste.jpg|thumb|200 px|د ۱۷مې پېړۍ يوه اسماني نخشه، دغه نخشه د هالېنډي نخشه کښونکي فرېدريک ډيويټ لخوا کښل شوې.]]
+په پخوانيو وختونو کې، ستورپوهنه يواځې په سترګو د ښکارېدونکيو اسماني شتو کتنو او د هغوی د خوځښتونو وړاندوينه ګڼل کېدله. په ځينې ځاينو کې، لکه  In some locations, such as [[Stonehenge]], early cultures assembled massive artifacts that likely had some astronomical purpose. In addition to their ceremonial uses, these observatories could be employed to determine the seasons, an important factor in knowing when to plant crops, as well as in understanding the length of the year.<ref name="history">{{cite book | author=George Forbes | title=History of Astronomy | publisher=Watts & Co. | location=London  | year=۱۹۰۹ | format =Free e-book from [[Project Gutenberg]] | url=http://www.gutenberg.org/etext/8172 }}</ref>
 
 Before tools such as the telescope were invented early study of the stars had to be conducted from the only vantage points available, namely tall buildings, trees and high ground using the bare eye.
 
 As civilizations developed, most notably [[Mesopotamia]], [[Ancient Egypt|Egypt]], [[Persia]], [[Maya civilization|Maya]], [[Hellenic civilization|Greece]], [[History of India|India]], and [[China]], astronomical observatories were assembled, and ideas on the nature of the universe began to be explored. Early ideas about the motions of the planets were formed, and the nature of the Sun, Moon and the Earth in the universe were explored philosophically. The Earth was believed to be the center of the universe with the Sun, the Moon and the stars rotating around it. This is known as the geocentric model of the universe.
 
-A few notable astronomical discoveries were made prior to the application of the telescope. For example, the [[Axial tilt|obliquity of the ecliptic]] was estimated as early as 1,000 B.C by the Chinese. The [[Babylonia|Chaldean]]s discovered that [[eclipses]] recurred in a repeating cycle known as a [[Saros cycle|saros]].{{Fact|date=June 2007}} In the second century B.C., the size and distance of the Moon were estimated by [[Hipparchus]].
+A few notable astronomical discoveries were made prior to the application of the telescope. For example, the [[Axial tilt|obliquity of the ecliptic]] was estimated as early as ۱٬۰۰۰ B.C by the Chinese. The [[Babylonia|Chaldean]]s discovered that [[eclipses]] recurred in a repeating cycle known as a [[Saros cycle|saros]].{{Fact|date=June ۲۰۰۷}} In the second century B.C., the size and distance of the Moon were estimated by [[Hipparchus]].
 
-During the Middle Ages, observational astronomy was mostly stagnant in [[Middle Ages|medieval]] Europe, at least until the [[13th century]]. However, observational astronomy flourished in the [[Persian Empire]] and other parts of the world. Astronomers during that time introduced many names that are now used for individual stars.<ref name="short history">{{cite book | author=Arthur Berry | title=A Short History of Astronomy From Earliest Times Through the Nineteenth Century | publisher=Dover Publications, Inc. | location=New York | year=1961 }}</ref><ref name="Cambridge history">{{cite book | editor=Michael Hoskin | title=The Cambridge Concise History of Astronomy | publisher=Cambridge University Press  | year=1999 | id = ISBN 0-521-57600-8 }}</ref>
+During the Middle Ages, observational astronomy was mostly stagnant in [[Middle Ages|medieval]] Europe, at least until the [[۱۳th century]]. However, observational astronomy flourished in the [[Persian Empire]] and other parts of the world. Astronomers during that time introduced many names that are now used for individual stars.<ref name="short history">{{cite book | author=Arthur Berry | title=A Short History of Astronomy From Earliest Times Through the Nineteenth Century | publisher=Dover Publications, Inc. | location=New York | year=۱۹۶۱ }}</ref><ref name="Cambridge history">{{cite book | editor=Michael Hoskin | title=The Cambridge Concise History of Astronomy | publisher=Cambridge University Press  | year=۱۹۹۹ | id = ISBN ۰-۵۲۱-۵۷۶۰۰-۸ }}</ref>
 
 ===پوهنيز بدلون===
 [[Image:Galileo moon phases.jpg|thumb|right|280px|Galileo's sketches and observations of the Moon revealed that the surface was mountainous]]
@@ -89,13 +89,13 @@ During the [[Renaissance]], [[Nicolaus Copernicus]] proposed a [[heliocentric mo
 
 Kepler was the first to devise a system that described correctly the details of the motion of the planets with the Sun at the center. However, Kepler did not succeed in formulating a theory behind the laws he wrote down. It was left to [[Sir Isaac Newton|Newton's]] invention of [[celestial dynamics]] and his [[gravity|law of gravitation]] to finally explain the motions of the planets. Newton also developed the [[reflecting telescope]].
 
-Further discoveries paralleled the improvements in the size and quality of the telescope. More extensive star catalogues were produced by [[Nicolas Louis de Lacaille|Lacaille]]. The astronomer [[William Herschel]] made a detailed catalog of nebulosity and clusters, and in 1781 discovered the planet [[Uranus]], the first new planet found. The distance to a star was first announced in 1838 when the [[parallax]] of [[61 Cygni]] was measured by [[Friedrich Bessel]].
+Further discoveries paralleled the improvements in the size and quality of the telescope. More extensive star catalogues were produced by [[Nicolas Louis de Lacaille|Lacaille]]. The astronomer [[William Herschel]] made a detailed catalog of nebulosity and clusters, and in ۱۷۸۱ discovered the planet [[Uranus]], the first new planet found. The distance to a star was first announced in ۱۸۳۸ when the [[parallax]] of [[۶۱ Cygni]] was measured by [[Friedrich Bessel]].
 
 During the nineteenth century, attention to the [[three body problem]] by [[Leonhard Euler|Euler]], [[Alexis Claude Clairaut|Clairaut]], and [[Jean le Rond d'Alembert|D'Alembert]] led to more accurate predictions about the motions of the Moon and planets. This work was further refined by [[Joseph Louis Lagrange|Lagrange]] and [[Pierre Simon Laplace|Laplace]], allowing the masses of the planets and moons to be estimated from their perturbations.
 
-Significant advances in astronomy came about with the introduction of new technology, including the [[spectroscope]] and [[photography]]. [[Joseph von Fraunhofer|Fraunhofer]] discovered about 600 bands in the spectrum of the Sun in 1814-15, which, in 1859, [[Gustav Kirchhoff|Kirchhoff]] ascribed to the presence of different elements. Stars were proven to be similar to the Earth's own Sun, but with a wide range of [[temperature]]s, [[mass]]es, and sizes.<ref name="short history" />
+Significant advances in astronomy came about with the introduction of new technology, including the [[spectroscope]] and [[photography]]. [[Joseph von Fraunhofer|Fraunhofer]] discovered about ۶۰۰ bands in the spectrum of the Sun in ۱۸۱۴-۱۵, which, in ۱۸۵۹, [[Gustav Kirchhoff|Kirchhoff]] ascribed to the presence of different elements. Stars were proven to be similar to the Earth's own Sun, but with a wide range of [[temperature]]s, [[mass]]es, and sizes.<ref name="short history" />
 
-The existence of the Earth's galaxy, the [[Milky Way]], as a separate group of stars, was only proved in the [[20th century]], along with the existence of "external" galaxies, and soon after, the expansion of the [[universe]], seen in the recession of most galaxies from us. Modern astronomy has also discovered many exotic objects such as [[quasar]]s, [[pulsar]]s, [[blazar]]s, and [[radio galaxy|radio galaxies]], and has used these observations to develop physical theories which describe some of these objects in terms of equally exotic objects such as [[black hole]]s and [[neutron star]]s. [[Physical cosmology]] made huge advances during the 20th century, with the model of the [[Big Bang]] heavily supported by the evidence provided by astronomy and physics, such as the [[cosmic microwave background radiation]], [[Hubble's law]], and [[Big Bang nucleosynthesis|cosmological abundances of elements]].
+The existence of the Earth's galaxy, the [[Milky Way]], as a separate group of stars, was only proved in the [[۲۰th century]], along with the existence of "external" galaxies, and soon after, the expansion of the [[universe]], seen in the recession of most galaxies from us. Modern astronomy has also discovered many exotic objects such as [[quasar]]s, [[pulsar]]s, [[blazar]]s, and [[radio galaxy|radio galaxies]], and has used these observations to develop physical theories which describe some of these objects in terms of equally exotic objects such as [[black hole]]s and [[neutron star]]s. [[Physical cosmology]] made huge advances during the ۲۰th century, with the model of the [[Big Bang]] heavily supported by the evidence provided by astronomy and physics, such as the [[cosmic microwave background radiation]], [[Hubble's law]], and [[Big Bang nucleosynthesis|cosmological abundances of elements]].
 
 ==ستورپوهنيزې کتنې==
 [[Image:USA.NM.VeryLargeArray.02.jpg|thumb|250px|left|[[Radio telescope]]s are among the many different tools used by astronomers]]
