*Empty MediaWiki Message*

--- a/ناروۍ.mw
+++ b/ناروۍ.mw
@@ -60,9 +60,15 @@ HDI=0.963 |
 HDI_rank=1st |
 footnotes = <sup>1</sup>Official national language is Norwegian [[bokmål]] and [[nynorsk]]. Additionally [[Sami languages|Sami]] is co-official language of six municipalities and [[Finnish language|Finnish]] of one municipality.<br><sup>2</sup> Two more TLDs assigned, but not used: [[.sj]] for Svalbard and Jan Mayen; [[.bv]] for [[Bouvet Island]]<br><sup>3</sup>Area rank based on UN figure which includes Svalbard and Jan Mayen }}
 
-'''ناروې''', رسمي توګه د ناروې شاهي ، باچاهت([[د ناروې ژبه|ناروېژي]]: o شاهي د ناروې شاهي ، سلطنتي، باچاهتي يا شاهي ، باچاهتي ، سلطنتي ناروې) is a [[Nordic countries|Nordic country]] on the western portion of the [[Scandinavian Peninsula]], bordering [[Sweden]], [[فېنلانډ]] and [[روسيه]]. Norway has a very elongated shape; the country's extensive coastline along the [[Atlantic Ocean|North Atlantic Ocean]] is home to its famous [[fjord]]s. The [[monarchy|Kingdom]] of Norway also includes the [[Arctic]] island territories of [[Svalbard]] and [[Jan Mayen]]. The Norwegian [[sovereignty]] on Svalbard is based on the [[Svalbard Treaty]], but this does not apply to Jan Mayen. [[Bouvet Island]] in the South Atlantic Ocean and a claim for [[Peter I Island]] in the South [[Pacific Ocean]] are also external [[Dependent area|dependencies]], but these are not part of the Kingdom. Norway also claims [[Queen Maud Land]] in [[Antarctica]].
+'''ناروې''' {{Audio-IPA|en-us-Norway.ogg|/ˈnɔrweɪ/}} ([[نارويژي ژبه|نارويژي]]: ''نورګه'' ([[بوکمول]]) يا ''نورېګ'' ([[نينورشک]])), په رسمي توګه '''د ناروې پاچايي''', په [[سهېلي اروپا]] کې د اساسي قانون پر بنسټ جوړ، يو پاچايي هېواد دی چې د سهېلي څنډو نه تر سوېلي څنډو پورې د لويديځې [[ټاپووزمې سکانډېنيويا]] برخه ده. د همدغه هېواد د پولو لويه برخه، په ختيځ کې د [[سويډن]] هېواد سره ده. د ناروې د ختيځو سيمې پولې د [[فېنلېنډ]] او د [[روسيې]] د هېوادونو سره نښتې دي په همدې توګه د دغه هېواد لويديځه خواې او سوېلي خواوې د سهېلي سمندر په اوبو کې راګير دي چې د همدغه سمندر له لارې [[د برتانيې پاچايي]]، [[د فارويه ټاپوان]]و او په سوېل کې د [[ډېنمارک]] سره خپلې ګډې سمندري پولې لري. د ناروې غځېدلې سمندري څنډه بيا په همدې توګه د [[سهېلي اطلس سمندر]] او د [[بارېنټ سمندر]] ته غځېدلې ده. دا هېواد د ګڼ شمېر خليجونو په درلودلو پېژندل کېږي.  
 
-Its citizens enjoy a high standard of living in a country that is generally perceived as clean and modern.
+In the 1920s, Norway annexed [[Jan Mayen]] and was given the sovereignty over the [[Arctic]] archipelago of [[Svalbard]] under the [[Svalbard Treaty]]. The polar territories of [[Bouvet Island]], [[Peter I Island]] and [[Queen Maud Land]] are external [[Dependent territory|dependencies]], but not parts of Norway. Norwegian claim for a sector of Antarctic mainland called [[Queen Maud Land]] is not recognised by the international community.
+
+Becoming the first European nation to declare independence in the 20th century, since [[World War II]] Norway has experienced rapid economic growth, and is now amongst the wealthiest countries in the world.<ref>[[List of countries by GDP (nominal) per capita]]</ref><ref>[[List of countries by GDP (PPP) per capita]]</ref><ref>[[List of countries by current account balance]]</ref> Norway is the world's fourth largest oil exporter<ref>[https://www.cia.gov/library/publications/the-world-factbook/rankorder/2176rank.html]</ref> and the [[petroleum industry]] accounts for around a quarter of [[GDP]].<ref>[http://uk.reuters.com/article/oilRpt/idUKL0674675920070906 UPDATE 1-Statistics Norway raises '07 GDP outlook, cuts '08]</ref> The oil industry is mainly situated outside and controlled from the oil capital [[Stavanger]].
+
+Norway also has rich resources of gas fields, [[hydropower]], fish, forests, and minerals. Norway was the second largest exporter of seafood (in value, after China) in 2006.<ref>[http://www.globefish.org/filedownload.php?fileId=560 FAO Globefish global trends 2006]</ref> Other main industries include food processing, shipbuilding, metals, chemicals, mining, fishing and pulp and paper products. Norway has a [[Scandinavian welfare model]] and the largest capital reserve per capita of any nation.
+
+Norway was ranked highest of all countries in [[Human Development Index|human development]] from 2001 to 2008.<ref>[[Human Development Index]].</ref> It was also rated the most peaceful country in the world in a 2007 survey by [[Global Peace Index]].<ref>[http://news.bbc.co.uk/1/hi/in_depth/6704767.stm BBC NEWS World   Norway rated most peaceful nation<!--Bot-generated title-->]</ref> It is a founding member of [[NATO]].
 
 == تاريخ==
 :''Main article: [[History of Norway]]''
