--- a/بوتان.mw
+++ b/بوتان.mw
@@ -358,6 +358,7 @@ Bhutanese [[lama]] [[Dzongsar Jamyang Khyentse Rinpoche]] is a well-known filmma
 [[qu:Butan]]
 [[ro:Bhutan]]
 [[ru:Бутан]]
+[[sah:Бутан]]
 [[scn:Bhutan]]
 [[sco:Bhutan]]
 [[se:Bhutan]]
