--- a/ژونکيميا.mw
+++ b/ژونکيميا.mw
@@ -206,6 +206,7 @@ Researchers in biochemistry use specific techniques native to biochemistry, but 
 [[sr:Биохемија]]
 [[su:Biokimia]]
 [[sv:Biokemi]]
+[[sw:Biokemia]]
 [[ta:உயிர்வேதியியல்]]
 [[th:ชีวเคมี]]
 [[tl:Biyokimika]]
