*Empty MediaWiki Message*

--- a/كرم.mw
+++ b/كرم.mw
@@ -8,6 +8,8 @@
 د كرم يو بل ډول د "چيني كرم" په نامه ياديږي. چيني كرم د كاليوم له مالګو ، كلسيم او وسپنې نه غني دى. جاپانيانو چيني كرم له خپل جاپاني ډوله كرم سره پيوند كړى ، چې په پايله كې يې نوى ډول كرم تر لاسه كړى دى. دغه نوى چيني او جاپانى پيوندي كرم له يوې خوا پخپل تركيب كې ډېر غذايي مواد لري ، له بلې خوا ژر رسيږي ، بل دا چې حاصلات يې له نورو كرمو نه زيات وي ، چې نن ورځ په اروپا او امريكا كې هم دود دى او پراختيا يې موندلې ده. 
 په افريقا كې بيا د "حبشې كرم" ډېر نامتو دى . د كرم  دغه ډول د تور او پاڼيز كرم د طبيعي پيوند په پايله كې منځته راغلى دى .
 د پام وړ يوه خبره دا هم ده ، چې سرې ملۍ ، شنې ملۍ او ټېپر هم د كرم له نسله سره تړاو لري او د كرم ځينې ډولونه بلل كيږي؛ خو ددغو سابو هم له پاڼو ، هم له بېخ او رېښو نه كار اخيستل كيږي او له ويټامينونو نه هم غني دي.   
+
 ژباړن : اوڅار افغان .
 
- سرچينه : ګ . پ . شالاېووا ، و . پ . سيتنيكوف ، ت . م . كولياديچ. د عمومي مالوماتو انسكلوپېډيا، ۴۷ – ۵۲ مخونه ، د ۱۹۹۹ ز كال ماسكو ټاپ.
+سرچينه : ګ . پ . شالاېووا ، و . پ . سيتنيكوف ، ت . م . كولياديچ. د عمومي مالوماتو انسكلوپېډيا، ۴۷ – ۵۲ مخونه ، د ۱۹۹۹ ز كال ماسكو ټاپ.
+[[fa:کرم]]
