*Empty MediaWiki Message*

--- a/كرم.mw
+++ b/كرم.mw
@@ -12,4 +12,49 @@
 ژباړن : اوڅار افغان .
 
 سرچينه : ګ . پ . شالاېووا ، و . پ . سيتنيكوف ، ت . م . كولياديچ. د عمومي مالوماتو انسكلوپېډيا، ۴۷ – ۵۲ مخونه ، د ۱۹۹۹ ز كال ماسكو ټاپ.
-[[fa:کرم]]
+
+
+[[وېشنيزه:Leaf vegetables]]
+[[وېشنيزه:Brassica oleraca| ]]
+[[وېشنيزه:Cultivars]]
+
+[[ar:ملفوف]]
+[[gn:Tajao]]
+[[zh-min-nan:Ko-lê-chhài]]
+[[bg:Зеле]]
+[[cs:Hlávkové zelí]]
+[[cy:Bresychen]]
+[[da:Hvidkål]]
+[[de:Weißkohl]]
+[[el:Λάχανο]]
+[[fa:کرم]][[es:Repollo]]
+[[gl:Repolo]]
+[[ko:양배추]]
+[[hi:बंद गोभी]]
+[[id:Kubis]]
+[[he:כרוב]]
+[[la:Brassica]]
+[[mr:कोबी]]
+[[ms:Kubis Bulat]]
+[[nl:Wittekool]]
+[[ja:キャベツ]]
+[[ku:Kelem]]
+[[nn:Kvitkål]]
+[[nrm:Caboche]]
+[[pl:Kapusta głowiasta]]
+[[pt:Repolho]]
+[[ru:Капуста белокочанная]]
+[[sco:Cabbitch]]
+[[sq:Lakra]]
+[[simple:Cabbage]]
+[[szl:Kapusta gowjasto]]
+[[sr:Купус]]
+[[fi:Keräkaali]]
+[[sv:Vitkål]]
+[[te:కాబేజీ]]
+[[th:กะหล่ำปลี]]
+[[tg:Карам]]
+[[to:Kāpisi]]
+[[tr:Lahana]]
+[[yi:קרויט]]
+[[zh:捲心菜]]
