*Empty MediaWiki Message*

--- a/كرم.mw
+++ b/كرم.mw
@@ -14,9 +14,7 @@
 سرچينه : ګ . پ . شالاېووا ، و . پ . سيتنيكوف ، ت . م . كولياديچ. د عمومي مالوماتو انسكلوپېډيا، ۴۷ – ۵۲ مخونه ، د ۱۹۹۹ ز كال ماسكو ټاپ.
 
 
-[[وېشنيزه:Leaf vegetables]]
-[[وېشنيزه:Brassica oleraca| ]]
-[[وېشنيزه:Cultivars]]
+[[وېشنيزه:د پاڼو سابه]]
 
 [[ar:ملفوف]]
 [[gn:Tajao]]
