--- a/كرم.mw
+++ b/كرم.mw
@@ -24,7 +24,8 @@
 [[cy:Bresychen]]
 [[da:Hvidkål]]
 [[de:Weißkohl]]
-[[el:Λάχανο]]
+[[en:Cabbage]]
+[el:Λάχανο]]
 [[fa:کرم]][[es:Repollo]]
 [[gl:Repolo]]
 [[ko:양배추]]
