*Empty MediaWiki Message*

--- a/كرم.mw
+++ b/كرم.mw
@@ -1,4 +1,13 @@
-د كرم كرنه له ډېرو لرغونو زمانو نه راهيسې انسانانو دود كړې ده او يو له ډېرو لرغونو دود شويو سابو نه ګڼل كيږي. نن ورځ د نړۍ داسې سيمه نشته چې هلته دې كرم ونه كرل شي. كرم زښت ډېر ډولونه لري ، چې د نورو ټولو سابو او تركاريو نه يې ډولونه زيات دى. د نړۍ په بېلابېلو سيمو كې د اوبهوا له توپير سره سم د هغوى بېلابېل ډولونه كرل كيږي. په ۱۹۸۹ زكال كې د كرم د ټولو ډولونو د حاصلاتو اندازه ، پرته له ګلپي نه ، ۳۶ ميلونو ټنو ته رسېدلې وه. 
+{{Infobox Cultivar | name = Cabbage
+| image = Cabbage.jpg
+| image_width = 250px
+| image_caption = Cabbage, cultivar unknown
+| species = ''[[Brassica oleracea]]''
+| group = Capitata Group
+| origin = [[Mediterranean]], 1st century
+| subdivision = Many; see text.
+}}
+د '''كرم''' كرنه له ډېرو لرغونو زمانو نه راهيسې انسانانو دود كړې ده او يو له ډېرو لرغونو دود شويو سابو نه ګڼل كيږي. نن ورځ د نړۍ داسې سيمه نشته چې هلته دې كرم ونه كرل شي. كرم زښت ډېر ډولونه لري ، چې د نورو ټولو سابو او تركاريو نه يې ډولونه زيات دى. د نړۍ په بېلابېلو سيمو كې د اوبهوا له توپير سره سم د هغوى بېلابېل ډولونه كرل كيږي. په ۱۹۸۹ زكال كې د كرم د ټولو ډولونو د حاصلاتو اندازه ، پرته له ګلپي نه ، ۳۶ ميلونو ټنو ته رسېدلې وه. 
 څېړونكي دې پايلې ته راغلي دي ، چې د كرم كرنه لومړى وار په نرم اقليم لرونكو سيمو كې دود شوه ، يانې د مديترانې سمندرګي په سيمه او سويلي اروپا كې. د اټكلي شمېر له مخې څلورنيم زره كاله پخوا د كرم كرنه دود شوې ده. 
 په امريكا ، افريقا ، اندونيزيا ، ماليزيا ، شمالي هند، فيليپين او يو شمېر نورو هېوادو كې بيا پنډوسي كرم پراختيا موندلې ده.  پنډوسي كرم هم نور ډېر ډولونه لري ، چې ځينې ډولونه يې په روسيه او نورو اروپايي هېوادو كې هم كرل كيږي. دغه ډول كرم له C ويټامين او قندو نه غني دى.
 د پاملرنې وړ خبره داده ، چې ګلپي هم د كرم له ډولونو نه ګڼل كيږي. ګلپي د ګرمۍ په وړاندې مقاومت نه لري ، ځكه خو معمولا په هغو سيمو كې كرل كيږي ، چې هوا يې سړه او لنده وي. ګلپي د كرم تر ټولو ډولونو نه ارزښتمن او ګټور دى . په رښتيا سره هم ډېر كم داسې خوراكي توكي شته ، چې هغوى دې پخپل تركيب كې البومين ، د كاليوم مالګې ، كلسيم ، او مګنيزم ولري ، خو دا ټول غذايي مواد په ګلپي كې شته . 
