*Empty MediaWiki Message*

--- a/كرم.mw
+++ b/كرم.mw
@@ -1,4 +1,4 @@
-{{Infobox Cultivar | name = Cabbage
+{{taxobox | name = Cabbage
 | image = Cabbage.jpg
 | image_width = 250px
 | image_caption = Cabbage, cultivar unknown
