The file [[:Image:Courbet_-_Bildnis_Baudelaires.jpg]] has been replaced by [[:Image:Gustave_Courbet_033.jpg]] by administrator [[:commons:User:Lycaon]]: ''exact, or scaled-down duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/شعر.mw
+++ b/شعر.mw
@@ -246,7 +246,7 @@ The [[fable]] is an ancient and near-ubiquitous [[Literary genre#List of literar
 Notable verse [[fabulist]]s have included [[Aesop]] (mid-[[6th century BC in poetry|6th century BCE]]), [[Vishnu Sarma]] (ca. [[2nd century BC in poetry|200 BCE]]), [[Phaedrus]] ([[1st century BC in poetry|15]] BCE&ndash;[[1st century in poetry|50]] CE), [[Marie de France]] ([[12th century in poetry|12th century]]), [[Biernat of Lublin]] (1465?&ndash;after 1529), [[Jean de La Fontaine]] (1621&ndash;95), [[Ignacy Krasicki]] ([[1735 in poetry|1735]]&ndash;[[1801 in poetry|1801]]), [[Ivan Krylov]] ([[1769 in poetry|1769]]&ndash;[[1844 in poetry|1844]]) and [[Ambrose Bierce]] ([[1842 in poetry|1842]]&ndash;[[1914 in poetry|1914]]).  All of [[Aesop]]'s [[translation|translator]]s and successors have owed a fundamental debt to that semi-legendary [[fabulist]].
 
 ;Prose poetry
-[[Image:Courbet - Bildnis Baudelaires.jpg|thumb|right|100px|[[Charles Baudelaire]], by [[Gustave Courbet]].]]{{Main|Prose poetry}}
+[[Image:Gustave_Courbet_033.jpg|thumb|right|100px|[[Charles Baudelaire]], by [[Gustave Courbet]].]]{{Main|Prose poetry}}
 [[Prose poetry]] is a [[hybrid]] genre that demonstrates attributes of both prose and poetry.  It may be indistinguishable from the [[microfiction|micro-story]] ([[List of acronyms and initialisms: A#AK|aka]] the "[[short short story]]," "[[flash fiction]]").  Most critics argue that it qualifies as poetry because of its conciseness, use of [[metaphor]], and special care for language.
 
 While some examples of earlier prose strike modern readers as poetic, prose poetry is commonly regarded as having originated in [[19th century in poetry|19th century]] [[France]], where its practitioners included [[Aloysius Bertrand]], [[Charles Baudelaire]], [[Arthur Rimbaud]] and [[Stéphane Mallarmé]].
