The file [[:Image:Seychelles_coa.png]] has been replaced by [[:Image:Coat_of_arms_of_Seychelles.png]] by administrator [[:commons:User:Martin H.]]: ''(incorrectly named) duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/سیشل.mw
+++ b/سیشل.mw
@@ -5,7 +5,7 @@
 |conventional_long_name = Republic of Seychelles
 |عام نوم = Seychelles
 |بېرغ = Flag of the Seychelles.svg
-|نښان = Seychelles coa.png
+|نښان =Coat_of_arms_of_Seychelles.png
 |symbol_type = Coat of arms
 |نخشه = LocationSeychelles.png
 |national_motto = ''Finis Coronat Opus''<br>([[Latin language|Latin]]: The End Crowns the Work)
