--- a/عمر_خطاب.mw
+++ b/عمر_خطاب.mw
@@ -1,12 +1,14 @@
 [[Image:Khetab.jpg|thumb|عمر خطاب]]
 
-ښاغلی حاجي عمر خطاب احمدزی د کاپیسا په ولايت کې د تګاب په ولسوالۍ کې زېږېدلی دی. پلار ېې په لوګر، کاپيسا، سرشاهي او تګاب کې مشهوره حاکم اعلا و، نيکه نوم ېې پاچا خان د کوچيانو د ټبر مخ کښه شخصيت اود عبدالرحمان خان په وخت کې ډېر يو پياوړی اوسرزوری سړی و او وېل کېږي چې ددغه سړي ۲۸ مېرمنې وې او د عبدالرحمان خان له خوا بيا د ذهرو په ورکولو شهيد شو. د دوی پلرنی ټاټوبی دسرخاب ولسوالۍ د لوګر ولايت ده. 
-د عمر خطاب احمدزي کورنۍ  ډېره لويه اواوږده ليکه لري چې ډېری کورنۍ ېې په مزار شريف کې پاتې شوي دي. 
-عمر خطاب لومړنۍ زده کړې  په حبيبيه کې بيا د ايشه درانيه کې منځينۍ زده کړې او ورپسې بيا لوړو زده کړو ته  د کابل پوهنتون د اقتصاد په پوهنځي کې په بري سره ومنل شو.
+ښاغلی حاجي '''عمر خطاب''' احمدزی د کاپیسا په ولايت کې د تګاب په ولسوالۍ کې زېږېدلی دی. پلار ېې په لوګر، کاپيسا، سرشاهي او تګاب کې مشهوره حاکم اعلا و، د نيکه نوم ېې پاچا خان د کوچيانو د ټبر مخ کښه شخصيت او د عبدالرحمان خان په وخت کې ډېر يو پياوړی اوسرزوری سړی و او وېل کېږي چې د دغه سړي ۲۸ مېرمنې وې او د عبدالرحمان خان له خوا بيا د ذهرو په ورکولو شهيد شو. د دوی پلرنی ټاټوبی دسرخاب ولسوالۍ د لوګر ولايت ده. 
+د عمر خطاب احمدزي کورنۍ  ډېره لويه او اوږده ليکه لري چې ډېری کورنۍ ېې په مزار شريف کې پاتې شوي دي. 
+
+== زده کړې ==
+عمر خطاب لومړنۍ زده کړې  په حبيبيه کې بيا د عايشه درانيه کې منځينۍ زده کړې او ورپسې بيا لوړو زده کړو ته د کابل پوهنتون د اقتصاد په پوهنځي کې په بري سره ومنل شو.
 عمر خطاب د درېو وروڼو خاوند دی چې يو ورور ېې په تنظيمي جنګونو کې  په مزار کې ورک شو.
 درې خويندې لري او يوه ېې وفات شوې ، دوه نورې ژوندۍ دي .
-په کابل کې وروسته له لوړو زدهکړو دوه کاله عسکري ته ولاړ او بيا ېې راډيو ټلويزيون کې د راډيويي خپرونو په لړۍ کې لومړی د اماتور په توګه بيا د يو تکړه وياند په توګه کارپيل کړ.
-په کال   ۱۹۷۸ ع کې وروسته د ځينو سياسي ملحوظاتو له کبله امريکې ته لاړ، هالته ېې هم د ژوند د تېرولو لپاره د هر ډول حرفيي کارونو ته اوږه ورکړه.  
-مخکې له دې چې دی امريکې ته ولاړ شي يو فعال مبارز د ظاهر شاه په خلاف لاريونونو کې برخه اخيسته ، همداسې د داود خان د حکومت  له نسکورېدو وروسته امريکې ته ولاړ.
+په کابل کې وروسته له لوړو زده کړو دوه کاله عسکري ته ولاړ او بيا ېې راډيو ټلويزيون کې د راډيويي خپرونو په لړۍ کې لومړی د اماتور په توګه بيا د يو تکړه وياند په توګه کارپيل کړ.
+په کال ۱۹۷۸ ز کې وروسته د ځينو سياسي ملحوظاتو له کبله امريکې ته لاړ، هلته ېې هم د ژوند د تېرولو لپاره د هر ډول حرفيي کارونو ته اوږه ورکړه.  
+مخکې له دې چې دی امريکې ته ولاړ شي يو فعال مبارز د ظاهر شاه په خلاف لاريونونو کې برخه اخيسته، همداسې د داود خان د حکومت  له نسکورېدو وروسته امريکې ته ولاړ.
 په کال  ۱۹۹۲ کې په لومړي ځل د افغانانو لپاره په جنوبي کلفورنيا کې يوه راډيويي شبکه د پيام افغان په نامه پرانيستله. 
 وروسته بيا د ډېرو افغانانو په غوښتنه د همدې پیام افغان په نوم په ۲۰۰۷ کې يوه ټيلويزيوني شبکه پرانيستله .
