*Empty MediaWiki Message*

--- a/عمر_خطاب.mw
+++ b/عمر_خطاب.mw
@@ -11,3 +11,7 @@
 مخکې له دې چې دی امريکې ته ولاړ شي يو فعال مبارز د ظاهر شاه په خلاف لاريونونو کې برخه اخيسته، همداسې د داود خان د حکومت  له نسکورېدو وروسته امريکې ته ولاړ.
 په کال  ۱۹۹۲ کې په لومړي ځل د افغانانو لپاره په جنوبي کلفورنيا کې يوه راډيويي شبکه د پيام افغان په نامه پرانيستله. 
 وروسته بيا د ډېرو افغانانو په غوښتنه د همدې پیام افغان په نوم په ۲۰۰۷ کې يوه ټيلويزيوني شبکه پرانيستله .
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:خبريالان]]
