*Empty MediaWiki Message*

--- a/دوتنه:Khetab.jpg.mw
+++ b/دوتنه:Khetab.jpg.mw
@@ -1,1 +1,10 @@
 عمر خطاب د پيام افغان د ټلويزون مشر او چلوونکی دی. نوموړی يو تکړه افغان ژورناليست دی چې په کاليفورنيا کې اوسېږي
+
+
+
+
+
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:خبريالان]]
